--- a/app/category.html
+++ b/app/category.html
@@ -60,89 +60,46 @@
           </div>
         </div>
         <div class="container">
-          <ul class="parts">
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts1.svg" alt="img">
-                <span>Basics</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts2.svg" alt="img">
-                <span>Networks and Tokens</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts3.svg" alt="img">
-                <span>Swap and Bridge</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="promoted">
-        <div class="container">
-          <h4>Promoted Articles</h4>
-          <ul>
-            <li>
-              <a href="#">
-                How to Create a new wallet? aaaaaaaaaaaaaaa....
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                How to Create a new wallet? aaaaaaaaaaaaaaa....
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Export assets & images as a zip file
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Export assets & images as a zip file
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Deploy a project to the cloud with aws
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Deploy a project to the cloud with aws
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Create a team and manage access tokens
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Create a team and manage access tokens
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Upgrading your account
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Upgrading your account
-              </a>
-            </li>
-          </ul>
+          <div class="category">
+            <h3>Basics</h3>
+            <p class="category__text">How to go from zero to one and start using CLV Wallet</p>
+            <ul>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer tsdfsdfsdf fsdfsf question,...</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer this
+                    question,...</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer this
+                    question,...</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer this
+                    question,...</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer this
+                    question,...</p>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="looking">
