--- a/app/detail.html
+++ b/app/detail.html
@@ -60,89 +60,16 @@
           </div>
         </div>
         <div class="container">
-          <ul class="parts">
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts1.svg" alt="img">
-                <span>Basics</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts2.svg" alt="img">
-                <span>Networks and Tokens</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts3.svg" alt="img">
-                <span>Swap and Bridge</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="promoted">
-        <div class="container">
-          <h4>Promoted Articles</h4>
-          <ul>
-            <li>
-              <a href="#">
-                How to Create a new wallet? aaaaaaaaaaaaaaa....
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                How to Create a new wallet? aaaaaaaaaaaaaaa....
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Export assets & images as a zip file
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Export assets & images as a zip file
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Deploy a project to the cloud with aws
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Deploy a project to the cloud with aws
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Create a team and manage access tokens
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Create a team and manage access tokens
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Upgrading your account
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Upgrading your account
-              </a>
-            </li>
-          </ul>
+          <div class="wallet">
+            <h2>How to create a new wallet</h2>
+            <p>If you are a brand new Solana user, select "Create New Wallet". If you are an existing Solana user coming from sollet, you can follow steps here to migrate your existing wallets to Phantom.</p>
+            <div class="wallet__box">
+              <img src="images/mobile.svg" alt="Mobile">
+            </div>
+            <p>
+              Store your "Secret Recovery Phrase" in a safe and secure location, it is the only way to recover your wallet. At no point will a member of the Phantom team ever ask you for this phrase. Whoever has access to this phrase has access to your funds.  Note: We now have an <a href="#">integration with 1Password</a> for safe storage of your secret recovery phrase.
+            </p>
+          </div>
         </div>
       </section>
       <section class="looking">
