--- a/app/result.html
+++ b/app/result.html
@@ -49,6 +49,9 @@
               </a>
               <input type="text" placeholder="Search for answers">
             </label>
+            <div class="not-found">
+              <h2>No article found</h2>
+            </div>
             <ul class="bread">
               <li>
                 <a href="#">CLV Support</a>
@@ -60,89 +63,40 @@
           </div>
         </div>
         <div class="container">
-          <ul class="parts">
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts1.svg" alt="img">
-                <span>Basics</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts2.svg" alt="img">
-                <span>Networks and Tokens</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-            <li>
-              <input type="radio">
-              <label>
-                <img src="images/parts3.svg" alt="img">
-                <span>Swap and Bridge</span>
-                <a href="#">See All Articles ></a>
-              </label>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="promoted">
-        <div class="container">
-          <h4>Promoted Articles</h4>
-          <ul>
-            <li>
-              <a href="#">
-                How to Create a new wallet? aaaaaaaaaaaaaaa....
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                How to Create a new wallet? aaaaaaaaaaaaaaa....
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Export assets & images as a zip file
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Export assets & images as a zip file
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Deploy a project to the cloud with aws
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Deploy a project to the cloud with aws
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Create a team and manage access tokens
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Create a team and manage access tokens
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Upgrading your account
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Upgrading your account
-              </a>
-            </li>
-          </ul>
+          <div class="category result">
+            <h3>Basics</h3>
+            <ul>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer tsdfsdfsdf fsdfsf question, ...</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer this
+                    question,...</p>
+                </a>
+              </li>
+            </ul>
+            <h3>Basics</h3>
+            <ul>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer tsdfsdfsdf fsdfsf question,...</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h4>What is a crypto wallet</h4>
+                  <p>If you had one Bitcoin (BTC), how would you store it and keep it safe? Trying to answer this
+                    question,...</p>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="looking">
