--- a/app/category.html
+++ b/app/category.html
@@ -35,6 +35,10 @@
               </ul>
             </div>
           </div>
+          <button class="menu__burger">
+            <img src="images/burger-open.svg" alt="Burger">
+            <img src="images/burger-close.svg" alt="Burger">
+          </button>
         </nav>
       </div>
     </header>
