--- a/app/detail.html
+++ b/app/detail.html
@@ -35,6 +35,10 @@
               </ul>
             </div>
           </div>
+          <button class="menu__burger">
+            <img src="images/burger-open.svg" alt="Burger">
+            <img src="images/burger-close.svg" alt="Burger">
+          </button>
         </nav>
       </div>
     </header>
@@ -60,10 +64,10 @@
           </div>
         </div>
         <div class="container">
-          <div class="wallet">
+          <div class="create">
             <h2>How to create a new wallet</h2>
             <p>If you are a brand new Solana user, select "Create New Wallet". If you are an existing Solana user coming from sollet, you can follow steps here to migrate your existing wallets to Phantom.</p>
-            <div class="wallet__box">
+            <div class="create__box">
               <img src="images/mobile.svg" alt="Mobile">
             </div>
             <p>
