--- a/result.html
+++ b/result.html
@@ -35,12 +35,16 @@
               </ul>
             </div>
           </div>
+          <button class="menu__burger">
+            <img src="images/burger-open.svg" alt="Burger">
+            <img src="images/burger-close.svg" alt="Burger">
+          </button>
         </nav>
       </div>
     </header>
     <main class="main-help">
       <section class="help">
-        <div class="search">
+        <div class="search result-search">
           <div class="container">
             <h2>How can we help you?</h2>
             <label>
@@ -52,15 +56,9 @@
             <div class="not-found">
               <h2>No article found</h2>
             </div>
-            <ul class="bread">
-              <li>
-                <a href="#">CLV Support</a>
-              </li>
-              <li>
-                <a href="#">Basics</a>
-              </li>
-            </ul>
           </div>
+        </div>
+        <div class="lines">
         </div>
         <div class="container">
           <div class="category result">
