--- a/detail.html
+++ b/detail.html
@@ -64,14 +64,22 @@
           </div>
         </div>
         <div class="container">
-          <div class="create">
+          <div class="article-wrap">
             <h2>How to create a new wallet</h2>
-            <p>If you are a brand new Solana user, select "Create New Wallet". If you are an existing Solana user coming from sollet, you can follow steps here to migrate your existing wallets to Phantom.</p>
-            <div class="create__box">
-              <img src="images/mobile.svg" alt="Mobile">
-            </div>
+            <p>If you are a brand new Solana user, select "Create New Wallet". If you are an existing Solana user coming
+              from sollet, you can follow steps here to migrate your existing wallets to Phantom.</p>
+            <img src="images/mobile.svg" alt="Mobile">
+            <ul>
+              <li>sdfsf</li>
+              <li>sdfsf</li>
+              <li>sdfsf</li>
+              <li>sdfsf</li>
+            </ul>
             <p>
-              Store your "Secret Recovery Phrase" in a safe and secure location, it is the only way to recover your wallet. At no point will a member of the Phantom team ever ask you for this phrase. Whoever has access to this phrase has access to your funds.  Note: We now have an <a href="#">integration with 1Password</a> for safe storage of your secret recovery phrase.
+              Store your "Secret Recovery Phrase" in a safe and secure location, it is the only way to recover your
+              wallet. At no point will a member of the Phantom team ever ask you for this phrase. Whoever has access to
+              this phrase has access to your funds. Note: We now have an <a href="#">integration with 1Password</a> for
+              safe storage of your secret recovery phrase.
             </p>
           </div>
         </div>
