--- a/app/index.html
+++ b/app/index.html
@@ -66,28 +66,25 @@
         <div class="container">
           <ul class="parts">
             <li>
-              <input type="radio">
-              <label>
+              <a class="help-center-radio-label">
                 <img src="images/parts1.svg" alt="img">
                 <span>Basics</span>
-                <a href="#">See All Articles ></a>
-              </label>
+              </a>
+              <a href="#">See All Articles ></a>
             </li>
             <li>
-              <input type="radio">
-              <label>
+              <a class="help-center-radio-label">
                 <img src="images/parts2.svg" alt="img">
                 <span>Networks and Tokens</span>
-                <a href="#">See All Articles ></a>
-              </label>
+              </a>
+              <a href="#">See All Articles ></a>
             </li>
             <li>
-              <input type="radio">
-              <label>
+              <a class="help-center-radio-label">
                 <img src="images/parts3.svg" alt="img">
                 <span>Swap and Bridge</span>
-                <a href="#">See All Articles ></a>
-              </label>
+              </a>
+              <a href="#">See All Articles ></a>
             </li>
           </ul>
         </div>
