--- a/app/index.html
+++ b/app/index.html
@@ -66,25 +66,25 @@
         <div class="container">
           <ul class="parts">
             <li>
-              <a class="help-center-radio-label">
+              <a href="#">
                 <img src="images/parts1.svg" alt="img">
                 <span>Basics</span>
+                <p>See All Articles ></p>
               </a>
-              <a href="#">See All Articles ></a>
             </li>
             <li>
-              <a class="help-center-radio-label">
+              <a href="#">
                 <img src="images/parts2.svg" alt="img">
                 <span>Networks and Tokens</span>
+                <p >See All Articles ></p>
               </a>
-              <a href="#">See All Articles ></a>
             </li>
             <li>
-              <a class="help-center-radio-label">
+              <a href="#">
                 <img src="images/parts3.svg" alt="img">
                 <span>Swap and Bridge</span>
+                <p>See All Articles ></p>
               </a>
-              <a href="#">See All Articles ></a>
             </li>
           </ul>
         </div>
