--- a/app/category.html
+++ b/app/category.html
@@ -44,7 +44,7 @@
     </header>
     <main class="main-help">
       <section class="help">
-        <div class="search">
+        <div class="rv-search">
           <div class="container">
             <h2>How can we help you?</h2>
             <label>
