--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
   <link rel="icon" type="image/" href="" sizes="">
   <link rel="stylesheet" href="css/style.min.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+
 </head>
 
 <body class="body-help">
@@ -76,7 +78,7 @@
               <a href="#">
                 <img src="images/parts2.svg" alt="img">
                 <span>Networks and Tokens</span>
-                <p >See All Articles ></p>
+                <p>See All Articles ></p>
               </a>
             </li>
             <li>
@@ -87,6 +89,114 @@
               </a>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="box-slide">
+        <div class="container">
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe1.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe2.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe3.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe4.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe5.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe6.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe7.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe8.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe9.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe10.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe11.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe12.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe13.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe1.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe2.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe3.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe4.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe5.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe6.svg" alt="Img">
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="images/swipe7.svg" alt="Img">
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="promoted">
@@ -192,6 +302,8 @@
     </div>
   </footer>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src='js/index.min.js'></script>
 </body>
 
