--- a/app/detail.html
+++ b/app/detail.html
@@ -75,6 +75,12 @@
               <li>sdfsf</li>
               <li>sdfsf</li>
             </ul>
+            <ol>
+              <li>sdfsf</li>
+              <li>sdfsf</li>
+              <li>sdfsf</li>
+              <li>sdfsf</li>
+            </ol>
             <p>
               Store your "Secret Recovery Phrase" in a safe and secure location, it is the only way to recover your
               wallet. At no point will a member of the Phantom team ever ask you for this phrase. Whoever has access to
