--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <ul>
             <li>
               <a href="#">
-                How to Create a new wallet? aaaaaaaaaaaaaaa....
+                How to Create a new wallet Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem deleniti distinctio excepturi facilis inventore ipsam iure magnam maiores non obcaecati omnis quis, quisquam ratione, repudiandae, vel vero. Animi, minima!
               </a>
             </li>
             <li>
