--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
                 </a>
               </div>
             </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
         </div>
       </section>
