--- a/app/category.html
+++ b/app/category.html
@@ -152,6 +152,9 @@
     </div>
   </footer>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src='js/index.min.js'></script>
 </body>
 
