--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
       </section>
       <section class="box-slide">
         <div class="container">
-          <div class="swiper mySwiper">
+          <div class="swiper mySwiper" id="swiper-cat">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <a href="#">
@@ -196,8 +196,8 @@
                 </a>
               </div>
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev-cat"></div>
+            <div class="swiper-button-next-cat"></div>
           </div>
         </div>
       </section>
