--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Document</title>
   <link rel="icon" type="image/" href="" sizes="">
-  <link rel="stylesheet" href="css/style.min.css"/>
+  <link rel="stylesheet" href="css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
-
+  <link rel="stylesheet" href="css/style.min.css"/>
 </head>
 
 <body class="body-help">
@@ -35,6 +35,27 @@
                   <a href="#">한국어</a>
                 </li>
               </ul>
+            </div>
+            <div class="panel-group" id="accordion">
+              <div class="panel">
+                <h6 class="panel-title">
+                  <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                    English
+                  </a>
+                </h6>
+                <div id="collapseOne" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <ul>
+                      <li>
+                        <a href="#">Deutc</a>
+                      </li>
+                      <li>
+                        <a href="#">한국어</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <button class="menu__burger">
@@ -207,7 +228,9 @@
           <ul>
             <li>
               <a href="#">
-                How to Create a new wallet Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem deleniti distinctio excepturi facilis inventore ipsam iure magnam maiores non obcaecati omnis quis, quisquam ratione, repudiandae, vel vero. Animi, minima!
+                How to Create a new wallet Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem
+                deleniti distinctio excepturi facilis inventore ipsam iure magnam maiores non obcaecati omnis quis,
+                quisquam ratione, repudiandae, vel vero. Animi, minima!
               </a>
             </li>
             <li>
