--- a/detail.html
+++ b/detail.html
@@ -70,10 +70,10 @@
               from sollet, you can follow steps here to migrate your existing wallets to Phantom.</p>
             <img src="images/mobile.svg" alt="Mobile">
             <ul>
+              <li>sdfsf sdfsfs dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf dfsf</li>
               <li>sdfsf</li>
-              <li>sdfsf</li>
-              <li>sdfsf</li>
-              <li>sdfsf</li>
+              <li>FDFDF</li>
+              <li>Ddfsf</li>
             </ul>
             <ol>
               <li>sdfsf</li>
