--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 <body class="body-help">
 <div class="main-wrapper">
   <div class="main-content">
+    <div class="secret">
+      <img class="warn-brown" src="images/brown.svg" alt="Img">
+      <p>CLV Support will NEVER DM you or ask for your Secret Recovery Phrase!</p>
+      <button class="close-brown">
+        <img src="images/brown-close.svg" alt="Img">
+      </button>
+
+    </div>
     <header class="header-help">
       <div class="container">
         <nav class="menu">
