--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
                   <img src="images/swipe7.svg" alt="Img">
                 </a>
               </div>
+              <div class="swiper-slide shadow-slide-cat">
+              </div>
             </div>
           </div>
         </div>
