--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <div class="panel-group" id="accordion">
               <div class="panel">
                 <h6 class="panel-title">
-                  <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                  <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion"
+                     href="#collapseOne">
                     English
                   </a>
                 </h6>
@@ -230,6 +231,24 @@
           </div>
         </div>
       </section>
+<!--      <section id="swiper-tag-box" class="box-slide">-->
+<!--        <div id="swiper-tag" class="swiper">-->
+<!--          <div class="swiper-wrapper">-->
+<!--            <div class="swiper-slide">-->
+<!--              sdfsdfs-->
+<!--            </div>-->
+<!--            <div class="swiper-slide">-->
+<!--              sdfsdfs-->
+<!--            </div>-->
+<!--            <div class="swiper-slide">-->
+<!--              sdfsdfs-->
+<!--            </div>-->
+<!--            <div class="swiper-slide">-->
+<!--              sdfsdfs-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </section>-->
       <section class="promoted">
         <div class="container">
           <h4>Promoted Articles</h4>
