--- a/index.html
+++ b/index.html
@@ -225,26 +225,82 @@
                   <img src="images/swipe7.svg" alt="Img">
                 </a>
               </div>
-              <div class="swiper-slide shadow-slide-cat">
-              </div>
+<!--              <div class="swiper-slide shadow-slide-cat">-->
+<!--              </div>-->
             </div>
           </div>
         </div>
       </section>
 <!--      <section id="swiper-tag-box" class="box-slide">-->
-<!--        <div id="swiper-tag" class="swiper">-->
-<!--          <div class="swiper-wrapper">-->
-<!--            <div class="swiper-slide">-->
-<!--              sdfsdfs-->
-<!--            </div>-->
-<!--            <div class="swiper-slide">-->
-<!--              sdfsdfs-->
-<!--            </div>-->
-<!--            <div class="swiper-slide">-->
-<!--              sdfsdfs-->
-<!--            </div>-->
-<!--            <div class="swiper-slide">-->
-<!--              sdfsdfs-->
+<!--        <div class="container">-->
+<!--          <div id="swiper-tag" class="swiper mySwiper">-->
+<!--            <div class="swiper-wrapper">-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
+<!--              <div class="swiper-slide">-->
+<!--                <a href="#">All</a>-->
+<!--              </div>-->
 <!--            </div>-->
 <!--          </div>-->
 <!--        </div>-->
